package it.polimi.ingsw.am11.decks;

public enum PlayableDeckType implements DeckType {
    GOLD,
    RESOURCE
}
