package it.polimi.ingsw.am11.decks;

public enum UtilitiesDeckType implements DeckType {
    STARTER,
    OBJECTIVE
}
