package it.polimi.ingsw.am11.decks.utils;

/**
 * The DeckType enum represents the different types of decks in the game. Each enum value
 * corresponds to a specific type of deck.
 * <p>
 * Can be values of <code>GOLD</code>, <code>OBJECTIVE</code>, <code>RESOURCE</code>,
 * <code>STARTER</code>.
 */
public enum DeckType {
    GOLD,
    OBJECTIVE,
    RESOURCE,
    STARTER
}
